[tool.poetry]
name = "firwin_designer"
version = "0.1.0"
description = ""
authors = ["wrist <stoicheia1986@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.19.4"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
voila = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
